<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoAzul"
    tools:context="com.automatica.AXCMP.c_Almacen.Almacen_Transferencia.Transferencia_Envio.Almacen_Transferencia_SurtirEmpaque">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="65dp"
        android:text="Empaque"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="Producto"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView59" />

    <TextView
        android:id="@+id/textView78"
        style="@style/EstiloTexto_Blanco_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="Contenido"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView68" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:text="Lote"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView78" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="Confirma\nPaquete"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView79" />

    <EditText
        android:id="@+id/edtx_Cantidad"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:ems="10"
        android:hint="@string/escanear_empaque"
        android:inputType="textPersonName"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:focusable="false"
        android:clickable="false"
        android:inputType="none"
        android:id="@+id/edtx_Producto_Empaque"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:ems="10"

        android:hint="@string/estatico_producto"

        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Cantidad" />

    <EditText
        android:id="@+id/edtx_Contenido_Empaque"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:ems="10"
        android:hint="@string/estatico_contenido"
        android:focusable="false"
        android:clickable="false"
        android:inputType="none"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Producto_Empaque" />

    <EditText
        android:id="@+id/edtx_Lote_Empaque"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/estatico_lote"
        android:inputType="none"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Contenido_Empaque" />

    <EditText
        android:id="@+id/edtx_ConfirmaEmpaque"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:ems="10"
        android:hint="@string/volver_escanear_empaque"
        android:inputType="textPersonName"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Lote_Empaque" />


</androidx.constraintlayout.widget.ConstraintLayout>
