<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoAzul"
    tools:context="com.automatica.AXCMP.c_Almacen.Almacen_Transferencia.Transferencia_Envio.Almacen_Transferencia_Surtir_Pallet">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:text="Pallet"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="Producto"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView59" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="Empaques"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView68" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="Contenido"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView69" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="Lote"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView78" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="Estatus"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView79" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="Confirma\n\t\t\tPallet"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        style="@style/EstiloTexto_Blanco_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView80" />

    <EditText
        android:id="@+id/edtx_Empaque"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="34dp"
        android:height="100dp"
        android:background="@color/blancoLetraStd"
        android:ems="10"
        android:hint="@string/escanear_Pallet"
        android:inputType="textPersonName"

        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edtx_Producto_Empaque"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="16dp"
        android:background="@color/blancoLetraStd"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"

        android:inputType="none"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Cantidad" />

    <EditText
        android:id="@+id/edtx_Empaques"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="76dp"
        android:background="@color/blancoLetraStd"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Producto_Empaque" />

    <EditText
        android:id="@+id/edtx_Contenido_Empaque"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:ems="10"
        android:hint="@string/estatico_contenido"
        android:focusable="false"
        android:clickable="false"
        android:inputType="none"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Empaques" />

    <EditText
        android:id="@+id/edtx_Lote_Empaque"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/estatico_lote"
        android:inputType="none"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Contenido_Empaque" />

    <EditText
        android:id="@+id/edtx_Estatus"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/estatico_estatus"
        android:inputType="none"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Lote_Empaque" />

    <EditText
        android:id="@+id/edtx_CantPorEmpaque"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="34dp"
        android:background="@color/blancoLetraStd"
        android:ems="10"
        android:hint="@string/volver_escanear_Pallet"
        android:inputType="textPersonName"
        android:textSize="@dimen/txtSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_Estatus" />
</androidx.constraintlayout.widget.ConstraintLayout>
